# yalunote

./: .gitignore  deepseek.py  hello.py  pyproject.toml  setup.py  todolist.py
config/: config.py
docs/: conf.py
tests/: test_advanced.py
