[project]
name = "yalunote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.6",
    "logfire>=3.1.1",
    "pydantic[email,timezone]>=2.10.5",
    "todoist-api-python>=2.1.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
